# migrate-mariadb

./: .env.example  .gitignore  README.md  config.yaml  dummy_prompt.md  go.mod  go.sum  pyproject.toml
cmd/mariasyncgo/: main.go
internal/checkpoint/: checkpoint.go  logger.go  logger_test.go  writer.go  writer_test.go
internal/config/: config.go  config_test.go
internal/discovery/: discovery.go  types.go
internal/engine/: builder.go  builder_test.go  engine.go  types.go
internal/mapping/: mapping.go  mapping_test.go
internal/tui/: config.go  dashboard.go  mapping.go  model.go  monitor.go
internal/worker/: pool.go  pool_test.go  worker.go
plan/: 00-overview.md  01-config-connection.md  02-metadata-discovery.md  03-tui-bubbletea.md  04-batch-engine.md  05-worker-pool-progress.md  06-recovery-checkpoint.md  audit-2026-04-26.md  capture-all-errors-2026-04-26.md  concurrency-producer-consumer-2026-04-27.md  fase_1_fondasi_konfigurasi.md  fase_2_metadata_discovery.md  fase_3_tui_screens.md  fase_4_modals.md  fase_5_core_engine.md  fase_6_worker_migration_screen.md  fase_7_polishing_testing.md  fix-action_toggle_selection-2026-04-26.md  fix-connect-proceed-2026-04-26.md  fix-progress-jump-2026-04-26.md  fix-tui-responsive-2026-04-27.md  fix-worker-after-connect-2026-04-26.md  pysync_maria_plan.md
pysync_maria/: logging_setup.py  main.py
pysync_maria/config/: settings.py
tests/: test_connection_screen.py  test_engine.py  test_engine_cancel.py  test_engine_failure.py  test_metadata.py  test_modals_smoke.py  test_pipeline.py  test_table_select_screen.py
(+13 files in other folders)
